test/negative/214_field_on_int.fx
// expect: non-record
val x = (5).foo
println(x)
